--- a/SampleDataSaver/SampleDataSaver.csproj
+++ b/SampleDataSaver/SampleDataSaver.csproj
@@ -11,9 +11,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
+    <PackageReference Include="structuremap" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\infrastructure\Infrastructure.DI.StructureMap\Infrastructure.DI.StructureMap.csproj" />
+    <ProjectReference Include="..\infrastructure\Infrastructure.Security\Infrastructure.Security.csproj" />
+    <ProjectReference Include="..\infrastructure\Infrastructure.Seedwork\Infrastructure.Seedwork.csproj" />
     <ProjectReference Include="..\ServiceContracts\ServiceContracts.csproj" />
     <ProjectReference Include="..\ServiceLibrary\ServiceLibrary.csproj" />
   </ItemGroup>
